# python-package

./: Justfile  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name}}/: .editorconfig  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Justfile  LICENSE  README.md  RELEASING.md  noxfile.py  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: release.yml  test.yml
{{cookiecutter.project_name}}/docs/: conf.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.project_name}}/tests/: test_version.py
